--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -16,11 +16,12 @@ firstTarget: all
 CXX					= @CXX@
 CXXFLAGS			= @CXXFLAGS@ @CPPFLAGS@ @BOOST_CPPFLAGS@ @PTHREAD_CFLAGS@
 LDFLAGS				= @LDFLAGS@ @BOOST_LDFLAGS@ @PTHREAD_CFLAGS@
-LIBS				= @LIBS@
-
-BOOST_LIBS			= program_options
-
-LIBS				+= $(BOOST_LIBS:%=-lboost_%)
+LIBS				= @LIBS@ \
+					  @BOOST_IOSTREAMS_LIB@ \
+					  @BOOST_THREAD_LIB@ \
+					  @BOOST_REGEX_LIB@ \
+					  @BOOST_PROGRAM_OPTIONS_LIB@ \
+					  -lboost_timer -lboost_chrono
 
 prefix				= @prefix@
 exec_prefix			= @exec_prefix@
@@ -48,6 +49,9 @@ endif
 
 # Use the DEBUG flag to build debug versions of the code
 DEBUG               = @DEBUG@
+
+VERSION				= @PACKAGE_VERSION@
+DEFINES				+= VERSION='"$(VERSION)"'
 
 ifeq "$(DEBUG)" "1"
 DEFINES				+= DEBUG
