--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -16,12 +16,13 @@ firstTarget: all
 CXX					= @CXX@
 CXXFLAGS			= @CXXFLAGS@ @CPPFLAGS@ @BOOST_CPPFLAGS@ @PTHREAD_CFLAGS@
 LDFLAGS				= @LDFLAGS@ @BOOST_LDFLAGS@ @PTHREAD_CFLAGS@
-LIBS				= @LIBS@ \
+LIBS				= -lcif++ \
 					  @BOOST_IOSTREAMS_LIB@ \
 					  @BOOST_THREAD_LIB@ \
 					  @BOOST_REGEX_LIB@ \
 					  @BOOST_PROGRAM_OPTIONS_LIB@ \
-					  -lboost_timer -lboost_chrono
+					  -lboost_timer -lboost_chrono \
+					  @LIBS@
 
 prefix				= @prefix@
 exec_prefix			= @exec_prefix@
