--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -59,7 +59,7 @@ DEFINES				+= VERSION='"$(VERSION)"'
 
 ifeq "$(DEBUG)" "1"
 DEFINES				+= DEBUG
-CXXFLAGS            += -g -O0
+CXXFLAGS            += -g -O0 -fstandalone-debug
 LDFLAGS				+= -g
 else
 CXXFLAGS			+= -O2
