--- a/configure.ac
+++ b/configure.ac
@@ -1,25 +1,25 @@
+AC_PREREQ([2.69])
+
 AC_INIT([dssp], 4.0, [m.hekkelman@nki.nl])
 
 dnl Switch to a C++ compiler, and check if it works.
 AC_LANG(C++)
 AX_CXX_COMPILE_STDCXX_17([noext])
 
-AX_CHECK_COMPILE_FLAG([-fstandalone-debug],
-	[
-		CXXFLAGS="$CXXFLAGS -fstandalone-debug"
-	] , , [-Werror])
+AX_CHECK_COMPILE_FLAG([-fstandalone-debug], [ CXXFLAGS="$CXXFLAGS -fstandalone-debug" ], , [-Werror])
 
 AC_CONFIG_SRCDIR([src/dssp.cpp])
 AC_CONFIG_AUX_DIR(config)
-dnl AC_CONFIG_MACRO_DIR([config/m4])
+AC_CONFIG_MACRO_DIR([config/m4])
+AC_CONFIG_HEADERS([src/config.hpp])
 
 AC_PREFIX_DEFAULT(/usr/local)
 
 AC_PROG_INSTALL
 
-AC_ARG_VAR([DEBUG], [Build a debug version of the application])
+AX_PTHREAD
 
-AC_PATH_PROG([PKG_CONFIG], [pkg-config])
+AC_ARG_VAR([DEBUG], [Build a debug version of the application])
 
 AC_ARG_VAR([MRC], [Specify a location for the mrc executable])
 
@@ -29,24 +29,20 @@ if test "x$MRC" = "x"; then
 fi
 
 if test "x$MRC" = "x"; then
-	AC_MSG_ERROR([mrc not found, the application will be built without resources])
+	AC_MSG_WARN([The mrc application was not found, not using resources.])
 fi
 
-AX_PTHREAD
+AC_ARG_ENABLE(
+	resources,
+	[AS_HELP_STRING([--disable-resources], [Do not use mrc to store data in resources])])
 
-AC_ARG_WITH([cif++],
-	AS_HELP_STRING([--with-cif++=@<:@location@:>@],
-		[Use the cif++ library as specified.]),
-		[
-			CPPFLAGS="$CPPFLAGS -I ${withval}/include"
-			CXXFLAGS="$CXXFLAGS -I ${withval}/include"
-			LDFLAGS="$LDFLAGS -L${withval}/.libs"
-			AC_SUBST([CIFPP_RSRC], [${withval}/rsrc]) 
-		])
+USE_RSRC=0
+AS_IF([test "x$enable_resources" != "xno"], [
+	USE_RSRC=1
+])
+AC_SUBST([USE_RSRC], [$USE_RSRC])
 
-AX_CHECK_LIBRARY([LIBCIFPP], [cif++/Config.hpp], [cif++],
-	[],
-	[AC_MSG_ERROR([libcif++ not found - cannot continue])])
+AC_DEFINE_UNQUOTED([USE_RSRC], [$USE_RSRC], [Use mrc to store resources])
 
 AC_CHECK_HEADER([filesystem], [], [AC_MSG_ERROR([The file <filesystem> is missing, perhaps you should install a more recent libstdc++ implementation.])])
 
@@ -71,10 +67,24 @@ AC_TRY_LINK(
 
 AX_BOOST_BASE([1.65.1], [], [AC_MSG_ERROR([Could not find a recent version of boost])])
 AX_BOOST_IOSTREAMS
-AX_BOOST_THREAD
-AX_BOOST_REGEX
 AX_BOOST_PROGRAM_OPTIONS
 AX_BOOST_DATE_TIME
+
+AC_ARG_WITH([cif++],
+	AS_HELP_STRING([--with-cif++=@<:@location@:>@],
+		[Use the cif++ library as specified.]),
+		[
+			CPPFLAGS="$CPPFLAGS -I ${withval}/include"
+			CXXFLAGS="$CXXFLAGS -I ${withval}/include"
+			LDFLAGS="$LDFLAGS -L${withval}/.libs"
+			LIBS="$LIBS -lcif++"
+			AC_SUBST([CIFPP_RSRC], [${withval}/rsrc]) 
+			AC_SUBST([CIFPP_LIB], [${withval}/.libs/libcif++.la]) 
+		])
+
+AX_CHECK_LIBRARY([LIBCIFPP], [cif++/Config.hpp], [cif++],
+	[],
+	[AC_MSG_ERROR([libcif++ not found - cannot continue])])
 
 AX_CHECK_LIBRARY([LIBZ], [zlib.h], [z],
 				 [ LIBS="$LIBS -lz" ],
@@ -82,13 +92,6 @@ AX_CHECK_LIBRARY([LIBZ], [zlib.h], [z],
 AX_CHECK_LIBRARY([LIBBZ2], [bzlib.h], [bz2],
 				 [ LIBS="$LIBS -lbz2"],
                  [AC_MSG_ERROR([libbz2 not found - compressed files not supported])])
-
-AC_SEARCH_LIBS([dladdr1], [dl],
-	[
-		AC_DEFINE([HAVE_DLADDR], 1, [Define if the system has dladdr])
-	], [], [])
-
-AC_SUBST([HAVE_DLADDR])
 
 dnl Process Makefile.in to create Makefile
 AC_OUTPUT([GNUmakefile])
