update configure and makefile

--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -39,10 +39,10 @@ bindir				= @bindir@
 datarootdir			= @datarootdir@
 datadir				= @datadir@
 
-ifneq "$(CHECK_CONFIG)" ""
-
 GNUmakefile: config.status GNUmakefile.in
 	$(SHELL) ./config.status
+
+ifneq "$(CHECK_CONFIG)" ""
 
 config.status: configure
 	$(SHELL) ./config.status --recheck
@@ -55,8 +55,13 @@ endif
 # main build variables
 CXXFLAGS            += -Wall -Wno-multichar
 
-DATADIR				= $(datadir)/dssp
+CIFPP_RSRC			= @CIFPP_RSRC@
 
+ifneq "$(CIFPP_RSRC)" ""
+DATADIR				= $(CIFPP_RSRC)
+else
+DATADIR				= $(datadir)/libcifpp
+endif
 DEFINES				+= DATADIR='"$(DATADIR)"'
 
 # Use the DEBUG flag to build debug versions of the code
@@ -110,6 +115,7 @@ src/revision.hpp: $(REVISION_FILE)
 $(OBJDIR)/pr-main.o: src/revision.hpp
 
 ifneq "$(USE_RSRC)" "0"
+COMMON_RSRC = $(DATADIR)/dictionaries
 
 rsrc:
 	@ mkdir -p $@
@@ -124,8 +130,6 @@ endif
 # disabled for now: centrifuge map-maker
 PROGRAMS = dssp
 
-dssp_RSRC = rsrc/
-
 define PROGRAM_template =
 
 $(1)_OBJECTS += $(1).o $(COMMON_OBJECTS)
@@ -133,7 +137,7 @@ $(1)_OBJECTS += $(1).o $(COMMON_OBJECTS)
 ifneq "$(USE_RSRC)" "0"
 $(1)_OBJECTS += $(1).o $(1)_rsrc.o
 
-$$(OBJDIR)/$(1)_rsrc.o: $$($(1)_RSRC)
+$$(OBJDIR)/$(1)_rsrc.o: $$($(1)_RSRC) $$(COMMON_RSRC)
 	$(MRC) -o $$@ $$^
 endif
 
@@ -163,10 +167,6 @@ all: $(PROGRAMS)
 install: $(PROGRAMS)
 	install -d $(bindir)
 	for p in $(PROGRAMS); do install $$p $(bindir)/$$p; done
-ifeq "$(USE_RSRC)" "0"
-	install -d $(DATADIR)/dictionaries
-	install -m644 rsrc/mmcif_pdbx.dic $(DATADIR)/dictionaries/mmcif_pdbx.dic
-endif
 
 .PHONY: FORCE
 FORCE:
