--- a/configure.ac
+++ b/configure.ac
@@ -86,10 +86,13 @@ AC_ARG_WITH([cif++],
 
 			CIFPP_CFLAGS="-I ${withval}/include"
 			CIFPP_LIBS="-L${withval}/.libs -lcif++"
+			CIFPP_RSRC="${withval}/rsrc"
 
 			AC_SUBST([CIFPP_CFLAGS], [$CIFPP_CFLAGS])
 			AC_SUBST([CIFPP_LIBS], [$CIFPP_LIBS])
 		])
+
+AC_SUBST([CIFPP_RSRC], [$CIFPP_RSRC])
 
 AS_IF([test "x$CIFPP_LIBS" = "x"], [
 	AC_PATH_PROG([PKG_CONFIG], [pkg-config])
@@ -108,8 +111,10 @@ is installed, and either use the --with-cif++ option or install
 pkg-config.])])
 
 			AX_CHECK_LIBRARY([CIFPP], [cif++/Config.hpp], [cif++],
-				 [ LIBS="-lcif++ $LIBS" ],
-                 [AC_MSG_ERROR([libcif++ not found])])
+				 [
+					 LIBS="-lcif++ $LIBS"
+				 ],
+
 	fi
 ])
 
