disable resources by default

--- a/configure.ac
+++ b/configure.ac
@@ -24,6 +24,9 @@ AC_ARG_VAR([DEBUG], [Build a debug version of the application])
 
 AC_ARG_VAR([MRC], [Specify a location for the mrc executable])
 
+PKG_PROG_PKG_CONFIG
+
+dnl using resources?
 USE_RSRC=0
 
 if test "x$MRC" = "x"; then
@@ -35,9 +38,9 @@ if test "x$MRC" = "x"; then
 else
 	AC_ARG_ENABLE(
 		resources,
-		[AS_HELP_STRING([--disable-resources], [Do not use mrc to store data in resources])])
+		[AS_HELP_STRING([--enable-resources], [Use mrc to store data in resources])])
 
-	AS_IF([test "x$enable_resources" != "xno" ], [
+	AS_IF([test "x$enable_resources" = "xyes" ], [
 		USE_RSRC=1
 	])
 fi
