--- a/src/config.hpp.in
+++ b/src/config.hpp.in
@@ -75,3 +75,6 @@
 
 /* Define to 1 if you have the ANSI C header files. */
 #undef STDC_HEADERS
+
+/* Use mrc to store resources */
+#undef USE_RSRC
