--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -144,7 +144,7 @@ rsrc:
 	@ mkdir -p $@
 
 rsrc/%.dic: $(LIBCIFPP_DATA_DIR)/%.dic.gz | rsrc
-	zcat $^ > $@
+	gunzip -c $^ > $@
 
 rsrc/%.dic: $(LIBCIFPP_DATA_DIR)/%.dic | rsrc
 	ln -fs $(realpath $^) $@
